fixed column gap with a margin

--- a/styles/assignment_one.css
+++ b/styles/assignment_one.css
@@ -1,21 +1,7 @@
 .header {
-    background: grey;
-    color: white;
-    padding: 10px;
-    text-align: left;
+    color: black;
     grid-column-start: 1;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
-
-  .subheader {
-      font-family: Verdana, Geneva, Tahoma, sans-serif;
-    }
-
-  .paragraph {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 15px;
-    margin: 20px;
-  }
 
     .container {
       max-width: 1700px;
@@ -26,28 +12,28 @@
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
+        margin: 10px;
         padding: 10px;
     }
 
 .card {
     box-sizing: border-box; 
-    padding: 10px; 
-    width: 24rem; 
+    margin: 10px;
+    width: 100%;
 }
 
 @media screen and (min-width: 768px) {
     .card {
-      width: 50%;
+      width: calc(50% - 20px); 
       flex-grow: 5;
     }
     
 }
 
 @media screen and (min-width: 1200px) {
-    .card {
-      width: 33.33%;
-    }
-   
+  .card {
+      width: calc(33.33% - 20px); 
+  }
 }
 
 
